完成fragment切換框架、修改部分自訂義view library的元件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CUBE_TEST</string>
+    <string name="msg_connect_fail">連線失敗</string>
+    <string name="msg_data_anomaly">資料異常</string>
 </resources>
